# dual_num

./: .gitignore  .travis.yml  Cargo.toml  README.md
dual_num/: Cargo.toml
dual_num/src/: lib.rs
examples/: simple.rs  test.rs
hyperdual/: Cargo.toml
hyperdual/src/: lib.rs
hyperdual/tests/: lib.rs
src/: differentials.rs  dual9.rs  lib.rs  linalg.rs
tests/: lib.rs
