[package]
authors = ["Aaron Trent <novacrazy@gmail.com>", "Christopher Rabotin <christopher.rabotin@gmail.com>"]
description = "Dual Number Implementation combined from multiple other implementations with optional support for automatic differentiation of multivariate vectorial functions into gradients"
license = "MIT"
name = "dual_num"
version = "0.2.0"
include = ["src/**/*", "Cargo.toml"]
keywords = ["dual", "number", "hyperdual", "gradient", "autodifferentiate"]
readme = "README.md"
documentation = "https://docs.rs/dual_num/"
repository = "https://github.com/novacrazy/dual_num"

[dependencies]
num-traits = "0.2"
nalgebra = "0.15"