[package]
name = "dual_num"
description = "Fully-featured Dual Number implementation with features for automatic differentiation of multivariate vectorial functions into gradients"
authors = ["Aaron Trent <novacrazy@gmail.com>", "Christopher Rabotin <christopher.rabotin@gmail.com>"]
version = "0.2.2"
license = "MIT"
include = ["src/**/*", "Cargo.toml"]
keywords = ["dual", "number", "hyperdual", "gradient", "autodifferentiate"]
readme = "README.md"
documentation = "https://docs.rs/dual_num/"
repository = "https://github.com/novacrazy/dual_num"

[dependencies]
num-traits = "0.2"
nalgebra = "0.15"